@@ -1,4 +1,8 @@
-14 November 2013: Matthijs
+16 December 2013: Matthijs
+- SUPPORT-101: If notify_acquired, then zone transfer in progress: don't
+  forward notify to xfr handler.
+
+15 November 2013: Matthijs
 - Fix task rescheduling for OPENDNSSEC-467.
 
 14 November 2013: Matthijs
